Refactoring js. Separate styles and javascript.

--- a/guitar_tab_editor.html
+++ b/guitar_tab_editor.html
@@ -6,157 +6,8 @@
   <meta property="og:url" content="asqd.github.io/guitar_tab_editor">
   <meta property="og:site_name" content="Simple Guitar Tab Editor | asqd">
   <meta property="og:description" content="Simple Guitar Tab Editor">
-  <style>
-    body {
-      max-width: 940px;
-      margin: 3em auto;
-      padding: 2em;
 
-      font-family: monospace;
-    }
-
-    .container {
-      max-width: 640px;
-      float: left;
-    }
-
-    ul {
-      margin: 0.5em;
-      padding: 1em;
-    }
-
-    li {
-      margin: 5px;
-    }
-
-    .btn-group {
-      margin-bottom: 0.5em;
-    }
-
-    .tips {
-      background: rgba(255, 255, 255, 0.95);
-      display: block;
-      float: right;
-      position: relative;
-      width: 300px;
-      top: 15px;
-    }
-
-    .tips th {
-      text-align: left;
-    }
-
-    .tips th,
-    .tips td {
-      padding: 5px 10px;
-    }
-
-    button {
-      border: 1px solid #808080;
-      border-radius: 3px;
-      padding: 0.3em 0.5em;
-      background: #848484;
-      -webkit-transition-duration: 0.4s;
-      transition-duration: 0.4s;
-      color: white;
-    }
-
-    button:hover {
-      background: white;
-      color: black;
-    }
-
-    a {
-      -webkit-transition-duration: 0.4s;
-      transition-duration: 0.4s;
-      color: #848484;
-      text-decoration: none;
-
-    }
-
-    a:hover {
-      background: #848484;
-      color: white;
-      padding: 0.1em 0.3em;
-    }
-
-    .tab {
-      white-space: pre;
-      position: relative;
-    }
-
-    .tab input {
-      width: 18px;
-      height: 18px;
-      outline: none;
-    }
-
-    .tab span {
-      cursor: pointer;
-    }
-
-    .credits {
-      margin-right: 2em;
-      float: right;
-    }
-
-    footer {
-      width: 100%;
-      display: inline-block;
-      margin-top: 2em;
-      height: 20px;
-    }
-
-    .modal {
-      display: none;
-      /* Hidden by default */
-      position: fixed;
-      /* Stay in place */
-      z-index: 1;
-      /* Sit on top */
-      left: 0;
-      top: 0;
-      width: 100%;
-      /* Full width */
-      height: 100%;
-      /* Full height */
-      overflow: auto;
-      /* Enable scroll if needed */
-      background-color: rgb(0, 0, 0);
-      /* Fallback color */
-      background-color: rgba(0, 0, 0, 0.4);
-      /* Black w/ opacity */
-      margin: 0 auto;
-    }
-
-    .modal-content {
-      background-color: #fefefe;
-      margin: auto;
-      padding: 20px;
-      border: 1px solid #888;
-      width: 80%;
-      height: 90%;
-    }
-
-    .remote-content {
-      width: 100%;
-      height: 97%;
-    }
-
-    .close {
-      color: #aaa;
-      float: right;
-      font-size: 28px;
-      font-weight: bold;
-    }
-
-    .close:hover,
-    .close:focus {
-      color: black;
-      text-decoration: none;
-      cursor: pointer;
-    }
-  </style>
+  <link rel="stylesheet" href="public/styles.css">
   <title>
     Simple Guitar Tab Generator by asqd
   </title>
@@ -339,211 +190,6 @@
   </div>
 </body>
 
-<script>
-  const DEFAULT_TEMPLATE = `
-e|------------------|------------------|------------------|------------------|
-B|-5--4-5-----------|------------------|-5--4-5-----------|------------------|
-G|--------4-7-5-----|-----4----5-4-----|--------4-7-5-----|-----4----5-4-----|
-D|--------------7---|---7----------7---|--------------7---|---7----------7---|
-A|------------------|-7----------------|------------------|-7----------------|
-E|------------------|------------------|------------------|------------------|
-
-e|-------------------------------------|------------------|------------------|
-B|--------5----6-5-----5---------------|-5--4-5-----------|------------------|
-G|--4-5-7----------7-----7-5----7--5-4-|--------4-7-5-----|-----4----5-4-----|
-D|-------------------------------------|--------------7---|---7----------7---|
-A|-------------------------------------|------------------|-7----------------|
-E|-------------------------------------|------------------|------------------|
-`
-
-  const TEMPLATE = `
-e|---------------------------------------------------------------------------|
-B|---------------------------------------------------------------------------|
-G|---------------------------------------------------------------------------|
-D|---------------------------------------------------------------------------|
-A|---------------------------------------------------------------------------|
-E|---------------------------------------------------------------------------|
-`
-  const PERMITTED_KEYS = [
-    "h", "p", "b", "r", "/", "\\", "v", "t", "s", "S", "*", "[", "n", "]",
-    "(", ")", "T", "P", "M", "=", "<", ">", "x", "o", "·", ".", "~", "-",
-    "0", "1", "2", "3", "4", "5", "6", "7", "8", "9"
-  ]
-
-  var $tab = document.querySelector(".tab")
-
-  function addRow(template) {
-    var html = prepareTemplate(template)
-    $tab.innerHTML += html
-
-    var spans = document.querySelectorAll("span")
-    var isMoving = false
-    var $dragging
-
-    spans.forEach(span => {
-      span.addEventListener("mousedown", e => {
-        e.preventDefault()
-        isMoving = true
-        $dragging = e.target
-      })
-      span.addEventListener("mouseup", e => {
-        isMoving = false
-      })
-      span.addEventListener("click", e => {
-        if (!e.target.classList.contains('is-editable')) return
-
-        html = e.target.innerHTML
-        e.target.innerHTML = "<input maxlength='1'>"
-        var input = e.target.querySelector("input")
-        if (html != "-") input.value = html
-        input.focus()
-        input.addEventListener("blur", ee => {
-          var value = ee.target.value != "" ? ee.target.value : "-"
-          e.target.innerHTML = `${value}`
-        })
-
-        input.addEventListener("keydown", (ee) => {
-          pressedKey = ee.key
-
-          if (PERMITTED_KEYS.indexOf(pressedKey) > -1) {
-            ee.target.value = pressedKey
-          }
-
-          let rowsNum = 77
-          let nodeList = document.querySelectorAll(".tab span.is-editable")
-          let rowCount = nodeList.length / rowsNum / 6
-          let index = Array.from(nodeList).indexOf(e.target)
-          let rem = (index - index % rowsNum) / rowsNum
-          let mod = index % rowsNum
-
-          if (ee.shiftKey && ee.key === "Tab") {
-            ee.preventDefault();
-            pressedKey = "ArrowLeft"
-          }
-
-          switch (pressedKey) {
-            case "Escape":
-              ee.preventDefault();
-              input.blur()
-              return false
-            case "Tab":
-              ee.preventDefault();
-              e.target.nextElementSibling.click()
-              input.blur()
-              return false
-            case "Enter":
-              input.blur()
-              return false
-            case 'ArrowLeft':
-              if (index > -1 && (index % rowsNum) > 1) {
-                e.target.previousElementSibling.click()
-                input.blur()
-              } else {
-                nodeList[index + 75].click()
-                input.blur()
-              }
-              return false
-            case 'ArrowUp':
-              if (rem > 0) {
-                nodeList[index - rowsNum].click()
-                input.blur()
-              } else {
-                nodeList[nodeList.length - (rowsNum - index % rowsNum)].click()
-                input.blur()
-              }
-              return false
-            case 'ArrowRight':
-              if (index > -1 && (index % rowsNum) < 76) {
-                e.target.nextElementSibling.click()
-                input.blur()
-              } else {
-                nodeList[index - 75].click()
-                input.blur()
-              }
-              return false
-            case 'ArrowDown':
-              if (rem < (nodeList.length / rowsNum - 1)) {
-                nodeList[index + rowsNum].click()
-                input.blur()
-              } else {
-                nodeList[index % rowsNum].click()
-                input.blur()
-              }
-              return false
-          }
-        })
-      })
-    })
-    document.body.addEventListener("mousemove", e => {
-      if (isMoving && e.target.classList.contains('is-editable')) {
-        var old_value = $dragging.innerHTML
-        var new_value = e.target.innerHTML
-        $dragging.innerHTML = new_value
-        e.target.innerHTML = old_value
-        $dragging = e.target
-      }
-    })
-  }
-
-  function prepareTemplate(template) {
-    return template.split("").map(e => {
-      if (e === "-" || e.match(/[0-9+]/) || e === "|")
-        return `<span class='is-editable'>${e}</span>`
-      return `<span>${e}</span>`
-    }).join("")
-  }
-
-  function clear() {
-    $tab.innerHTML = ""
-    addRow(TEMPLATE)
-  }
-
-  function download() {
-    var element = document.createElement('a')
-    element.setAttribute('href', 'data:text/plain;charset=utf-8,' + encodeURIComponent($tab.innerText))
-    element.setAttribute('download', "tab.txt")
-    element.style.display = 'none'
-    document.body.appendChild(element)
-    element.click()
-    document.body.removeChild(element)
-  }
-
-  function toggleVisibility(classname) {
-    element = document.querySelector("." + classname)
-    if (element.style.display === "none") {
-      element.style.display = "block"
-    }
-    else {
-      element.style.display = "none"
-    }
-  }
-
-  links = document.querySelectorAll("table a")
-
-  links.forEach((link) => {
-    link.addEventListener("click", e => {
-      e.preventDefault()
-
-      modal = document.getElementById("tips-modal")
-      modal.style.display = "block"
-
-      modal.querySelector('.modal-content .content').innerHTML = '<object class="remote-content" type="text/html" data=' + link.href + '></object>'
-    })
-  })
-
-  document.querySelector("#tips-modal .close").addEventListener("click", e => toggleVisibility("modal#tips-modal"))
-
-  window.onclick = (event) => {
-    modal = document.getElementById("tips-modal")
-    if (event.target == modal) modal.style.display = "none"
-  }
-
-  addRow(DEFAULT_TEMPLATE)
-  document.querySelector(".help").addEventListener("click", e => toggleVisibility("tips"))
-  document.querySelector(".clear").addEventListener("click", clear)
-  document.querySelector(".add-row").addEventListener("click", e => addRow(TEMPLATE))
-  document.querySelector(".download").addEventListener("click", e => download())
-
-</script>
+<script type="text/javascript" src="public/application.js"></script>
 
 </html>
