cat sprite experiments

--- a/wordfall/index.html
+++ b/wordfall/index.html
@@ -11,6 +11,9 @@
   </style>
   <script src="phaser.min.js"></script>
   <script src="words.js"></script>
+  <script src="lib/cat.js"></script>
+  <script src="lib/constants.js"></script>
+  <script src="lib/letter_box.js"></script>
   <script src="game.js?version=4"></script>
 </head>
 
