extract game logic to gameManager and uiManager classes

--- a/wordfall/index.html
+++ b/wordfall/index.html
@@ -11,10 +11,16 @@
   </style>
   <script src="phaser.min.js"></script>
   <script src="words.js"></script>
-  <script src="lib/cat.js"></script>
   <script src="lib/constants.js"></script>
+  <script src="lib/event_emitter.js"></script>
+  <script src="lib/cat.js"></script>
+  <script src="lib/ui_config.js"></script>
+  <script src="lib/ui_manager.js"></script>
+  <script src="lib/mixins/pick_letter_mixin.js"></script>
+  <script src="lib/mixins/spawn_letters_mixin.js"></script>
+  <script src="lib/game_manager.js"></script>
   <script src="lib/letter_box.js"></script>
-  <script src="game.js?version=4"></script>
+  <script src="game.js?version=5"></script>
 </head>
 
 <body>
