add main menu and level selection

--- a/wordfall/index.html
+++ b/wordfall/index.html
@@ -11,16 +11,22 @@
   </style>
   <script src="phaser.min.js"></script>
   <script src="words.js"></script>
+  <script src="lib/frequent_words.js"></script>
   <script src="lib/constants.js"></script>
   <script src="lib/event_emitter.js"></script>
   <script src="lib/cat.js"></script>
   <script src="lib/ui_config.js"></script>
   <script src="lib/ui_manager.js"></script>
-  <script src="lib/mixins/pick_letter_mixin.js"></script>
-  <script src="lib/mixins/spawn_letters_mixin.js"></script>
+  <script src="lib/letter_picker.js"></script>
+  <script src="lib/letter_spawner.js"></script>
   <script src="lib/game_manager.js"></script>
   <script src="lib/letter_box.js"></script>
-  <script src="game.js?version=5"></script>
+  <script src="lib/base_game_scene.js"></script>
+  <script src="lib/themed_level_scene.js"></script>
+  <script src="lib/endless_game_scene.js"></script>
+  <script src="lib/level_select_scene.js"></script>
+  <script src="lib/menu_scene.js"></script>
+  <script src="game.js?version=7.1.1"></script>
 </head>
 
 <body>
