--- a/wordfall/index.html
+++ b/wordfall/index.html
@@ -11,6 +11,9 @@
   </style>
   <script src="phaser.min.js"></script>
   <script src="words.js"></script>
+  <script src="lib/button.js"></script>
+  <script src="lib/text_button.js"></script>
+  <script src="lib/icon_button.js"></script>
   <script src="lib/frequent_words.js"></script>
   <script src="lib/constants.js"></script>
   <script src="lib/event_emitter.js"></script>
@@ -26,7 +29,7 @@
   <script src="lib/endless_game_scene.js"></script>
   <script src="lib/level_select_scene.js"></script>
   <script src="lib/menu_scene.js"></script>
-  <script src="game.js?version=7.1.1"></script>
+  <script src="game.js?version=7.1.6"></script>
 </head>
 
 <body>
