add text_button and bound add new bounds to scene refactoring text elements

--- a/wordfall/index.html
+++ b/wordfall/index.html
@@ -11,11 +11,13 @@
   </style>
   <script src="phaser.min.js"></script>
   <script src="words.js"></script>
+  <script src="lib/constants.js"></script>
   <script src="lib/button.js"></script>
   <script src="lib/text_button.js"></script>
   <script src="lib/icon_button.js"></script>
+  <script src="lib/text_view.js"></script>
+  <script src="lib/bound.js"></script>
   <script src="lib/frequent_words.js"></script>
-  <script src="lib/constants.js"></script>
   <script src="lib/event_emitter.js"></script>
   <script src="lib/cat.js"></script>
   <script src="lib/ui_config.js"></script>
