add game stat component

--- a/wordfall/index.html
+++ b/wordfall/index.html
@@ -15,6 +15,7 @@
   <script src="lib/button.js"></script>
   <script src="lib/text_button.js"></script>
   <script src="lib/icon_button.js"></script>
+  <script src="lib/game_stat.js"></script>
   <script src="lib/text_view.js"></script>
   <script src="lib/bound.js"></script>
   <script src="lib/frequent_words.js"></script>
