switch between menu, add pause menu

--- a/wordfall/index.html
+++ b/wordfall/index.html
@@ -11,6 +11,7 @@
   </style>
   <script src="phaser.min.js"></script>
   <script src="words.js"></script>
+  <script src="lib/extensions.js"></script>
   <script src="lib/constants.js"></script>
   <script src="lib/button.js"></script>
   <script src="lib/text_button.js"></script>
@@ -32,6 +33,7 @@
   <script src="lib/endless_game_scene.js"></script>
   <script src="lib/level_select_scene.js"></script>
   <script src="lib/menu_scene.js"></script>
+  <script src="lib/pause_menu_scene.js"></script>
   <script src="game.js?version=7.1.7"></script>
 </head>
 
