add collection screen

--- a/dino_x_match/index.html
+++ b/dino_x_match/index.html
@@ -26,6 +26,7 @@
     </style>
     <script src="lib/phaser.min.js"></script>
     <script src="lib/config.js"></script>
+    <script src="lib/itemConfig.js"></script>
     <script src="lib/missionsConfig.js"></script>
     <script src="lib/sameGame.js"></script>
     <script src="lib/gameManager.js"></script>
@@ -33,8 +34,13 @@
     <script src="lib/components/character.js"></script>
     <script src="lib/components/button.js"></script>
     <script src="lib/components/iconButton.js"></script>
+    <script src="lib/components/spriteContainer.js"></script>
+    <script src="lib/components/giftBox.js"></script>
+    <script src="lib/components/shopItem.js"></script>
+    <script src="lib/scenes/shopScene.js"></script>
     <script src="lib/scenes/menuScene.js"></script>
     <script src="lib/scenes/gameScene.js"></script>
+    <script src="lib/scenes/collectionScene.js"></script>
     <script src="lib/app.js?version=0.168"></script>
     <title>Приключения Тотошки</title>
 </head>
